force-app/main/default/objects/Ossia_Organisation_Settings__mdt/Ossia_Organisation_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Ossia Organisation Settings</label>
    <pluralLabel>Ossia Organisation Settings</pluralLabel>
</CustomObject>