force-app/main/default/objects/Ossia_Organisation_Settings__mdt/fields/Makeup_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Expiry_Days__c</fullName>
    <description>Ossia organization student cancel booking and cancel reason is not matched Teacher MC and Teacher Leave  then we manage this Expiry Days</description>
    <inlineHelpText>Ossia organization student cancel booking and cancel reason is not matched Teacher MC and Teacher Leave  then we manage this Expiry Days</inlineHelpText>
    <label>Makeup Expiry Days For All Cancel Reason</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>