force-app/main/default/objects/Ossia_Organisation_Settings__mdt/fields/Makeup_Expiry_Days_For_Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Expiry_Days_For_Public_Holiday__c</fullName>
    <description>store Makeup Expiry Days For Public Holidays</description>
    <label>Makeup Expiry Days For Public Holiday</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>