force-app/main/default/objects/Ossia_Organisation_Settings__mdt/fields/Makeup_Expiry_Days_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Expiry_Days_Teacher__c</fullName>
    <description>Manage ossia organization student cancel booking and cancel reason is Teacher MC and Teacher Leave then we manage this Expiry Days</description>
    <inlineHelpText>Ossia organization student cancel booking and cancel reason is Teacher MC and Teacher Leave then we manage this Expiry Days</inlineHelpText>
    <label>Makeup Expiry Days For Teacher Reason</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>