force-app/main/default/objects/Ossia_Organisation_Settings__mdt/fields/Ossia_at_Home_Id__c.field-meta.xml
<CustomField>
    <fullName>Ossia_at_Home_Id__c</fullName>
    <description>this field for get aureus at home Id</description>
    <label>Ossia at Home Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>